Alteração da logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <form class="form_container" action="">
-            <img class="logoHealth" src="/assets/image/LogoHealth.svg" alt="" srcset="">
+            <img class="logoHealth" src="/assets/image/cruz.svg" alt="" srcset="">
             <span class="span_text">Entre com seu login e senha para acessar os serviços</span>
             <div class="login">
                 <div class="login__email">
