--- a/cadastroRealizado.html
+++ b/cadastroRealizado.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/styles/global.css">
+    <link rel="stylesheet" href="/assets/styles/cadastroRealizado.css">
     <title>Document</title>
 </head>
 <body>
-    Cadastro realizado
+    <div class="container">
+        <img class="logoHealth" src="/assets/image/cruz.svg" alt="" srcset="">
+        <img class="sucessoImg" src="/assets/image/sucessoCadastro.svg" alt="" srcset="">
+        <div class="textos">
+            <h2>Seu cadastro foi realizado com sucesso!</h2>
+            <p>Acesse seu e-mail e confirme seus dados.</p>
+        </div>
+        <div class="home__button">
+            <button name="home" id="home">
+                <a class="registrar" href="/">Voltar para página de login</a>
+            </button>
+        </div>
+        <img class="logoIcc" src="/assets/image/LogoIcc.svg" alt="" srcset="">
+    </div>
+    <div class="lines">
+        <div class="line_green"></div>
+        <div class="line_blue"></div>
+    </div>
 </body>
 </html>
